hphp/hack/test/typecheck/dynamic_class_bad.php.exp
File "dynamic_class_bad.php", line 9, characters 3-4:
Was expecting a class, but got a string (Typing[4026])
